# stanley

./: .coverage  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  README_SIMPLE.md  docker-compose.prod.yml  docker-compose.yml  example.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  docs.yml  nightly.yml  release.yml  security.yml
.hive-mind/: hive.db  hive.db-shm  hive.db-wal
.hive-mind/sessions/: hive-mind-prompt-swarm-1766611583761-v0lbskok1.txt
config/: stanley.yaml  stanley.yaml.example
docker/: .dockerignore  .env.example  Dockerfile.api  Dockerfile.gui
docker/init-db/: 01-init.sql
docker/nginx/: nginx.conf  proxy_params
docker/scripts/: entrypoint.sh  healthcheck.sh
docs/: API.md  COMPETITIVE_RESEARCH.md  DEVELOPMENT_ROADMAP.md  MODULES.md  NAUTILUS_INTEGRATION.md  ai-research-assistants-analysis.md  api_versioning_strategy.md  commodities_view_design.md  gui_integration_map.md  ml_architecture_roadmap.md  platform_research_capital_iq_koyfin_sentieo.md  rust_financial_systems_architecture.md
docs/algorithms/: institutional_analytics_algorithms.py
docs/architecture/: editor_performance.md  enhanced_money_flow_architecture.py  enhanced_money_flow_summary.md  multi_user_design.md  opencode_fork_plan.md  opencode_integration_addendum.md  system_architecture.md  zed_agent_integration_plan.md  zed_crate_analysis.md
docs/mobile/: MOBILE_APP_ROADMAP.md
docs/research/: bloomberg_terminal_analysis.md  competitive-landscape-analysis.md  knowledge_management_tools_analysis.md  open-source-investment-tools-analysis.md
examples/: demo_integration.py  nautilus_backtest_example.py
stanley/: __init__.py
stanley-agent/: README.md  package.json  tsconfig.json
stanley-agent/scripts/: e2e-test.sh
stanley-agent/src/: index.ts
stanley-gui/: Cargo.toml  README.md
stanley-gui/crates/stanley-editor/: Cargo.toml  README.md
stanley-gui/crates/stanley-editor/src/: actions.rs  buffer.rs  editor.rs  element.rs  lib.rs  movement.rs  selection.rs  settings.rs  shims.rs
stanley-gui/crates/stanley-editor/src/display_map/: dimensions.rs  mod.rs
stanley-gui/crates/stanley-editor/src/scroll/: autoscroll.rs  mod.rs
stanley-gui/crates/stanley-editor/src/tests/: buffer_test.rs  mod.rs  types_test.rs
stanley-gui/src/: accounting.rs  agent.rs  api.rs  app.rs  commodities.rs  comparison.rs  dashboard.rs  etf.rs  keyboard.rs  macro_view.rs  main.rs  navigation.rs  notes.rs  notes_editor.rs  portfolio.rs  settings.rs  signals.rs  sync.rs  theme.rs
stanley-gui/src/components/: charts.rs  dashboard.rs  header.rs  mod.rs  modals.rs  sidebar.rs  tables.rs
stanley-gui/src/components/forms/: mod.rs  number_input.rs  text_input.rs  validation.rs
stanley-gui/src/tests/: api_test.rs  app_test.rs  benchmark_test.rs  integration_test.rs  mod.rs  notes_editor_test.rs  notes_test.rs
stanley/accounting/: __init__.py  accounting_analyzer.py  anomaly_detection.py  earnings_quality.py  edgar_adapter.py  financial_statements.py  footnotes.py  red_flags.py
stanley/analytics/: __init__.py  alerts.py  dark_pool.py  institutional.py  money_flow.py  options_flow.py  sector_rotation.py  smart_money_index.py  whale_tracker.py
stanley/api/: __init__.py  dependencies.py  main.py  main_new.py  settings.py
stanley/commodities/: __init__.py  commodities_analyzer.py  price_data.py
stanley/config/: __init__.py  logging.py  metrics.py
stanley/core/: __init__.py  core.py  errors.py
stanley/data/: __init__.py  data_manager.py  openbb_adapter.py
stanley/etf/: __init__.py  etf_analyzer.py
stanley/integrations/: __init__.py
stanley/macro/: __init__.py  business_cycle.py  credit_spreads.py  cross_asset.py  (+7 more)
tests/: conftest.py  test_anomaly_detection.py  test_api_institutional.py  test_auth.py  test_commodities.py  test_core.py  test_data_manager.py  test_earnings_quality.py  test_institutional.py  test_institutional_advanced.py  test_money_flow.py  test_money_flow_enhanced.py  test_notes.py  test_options.py  test_options_flow.py  test_portfolio.py  test_red_flags.py  test_research.py  test_sector_rotation.py  test_smart_money_index.py  test_whale_tracker.py
(+140 files in other folders)
