[package]
name = "stanley-gui"
version = "0.1.0"
edition = "2021"
description = "GPUI-based GUI for Stanley Investment Analysis Platform"
license = "MIT"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.0", features = ["full"] }

[features]
default = []
