[workspace]
members = [".", "crates/stanley-editor"]

[package]
name = "stanley-gui"
version = "0.1.0"
edition = "2021"
description = "GPUI-based GUI for Stanley Investment Analysis Platform"
license = "AGPL-3.0-only"

[dependencies]
stanley-editor = { path = "crates/stanley-editor" }
gpui = { git = "https://github.com/zed-industries/zed", branch = "main", default-features = false, features = ["wayland", "font-kit"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1.0", features = ["full"] }

[features]
default = []
